src/z80asm/src/cpp/lex.cpp
/* Generated by re2c 3.0 */
//-----------------------------------------------------------------------------
// z80asm
// lexer
// Copyright (C) Paulo Custodio, 2011-2023
// License: The Artistic License 2.0, http://www.perlfoundation.org/artistic_license_2_0
//-----------------------------------------------------------------------------

#include "args.h"
#include "errors.h"
#include "if.h"
#include "lex.h"
#include "preproc.h"
#include "utils.h"
#include <cctype>
#include <unordered_map>
using namespace std;



//-----------------------------------------------------------------------------

static unordered_map<string, Keyword> keyword_table = {
#	define X(id, text)		{ text, Keyword::id },
#	include "keyword.def"
};

static int a2i(const char* str, int base) {
	return (int)strtol(str, NULL, base);
}

static Keyword lu_keyword(const string& text) {
	auto it = keyword_table.find(str_tolower(text));
	if (it == keyword_table.end())
		return Keyword::None;
	else
		return it->second;
}

static string ident_change_case(const string& ident) {
	if (g_args.ucase())
		return str_toupper(ident);
	else
		return ident;
}

bool isident(const string& ident) {
	if (ident.empty())
		return false;
	else if (ident[0] != '_' && !isalpha(ident[0]))
		return false;
	else {
		for (auto c : ident) {
			if (c != '_' && !isalnum(c))
				return false;
		}
	}
	return true;
}

bool starts_with_hash(const string& line) {
	const char* p = line.c_str();
	const char* YYMARKER{ nullptr };
	
		{
			char yych;
			yych = *p;
			switch (yych) {
				case '\t':
				case '\v':
				case '\f':
				case ' ': goto yy3;
				case '#': goto yy4;
				default: goto yy1;
			}
yy1:
			++p;
yy2:
			{ return false; }
yy3:
			yych = *(YYMARKER = ++p);
			switch (yych) {
				case '\t':
				case '\v':
				case '\f':
				case ' ': goto yy5;
				case '#': goto yy4;
				default: goto yy2;
			}
yy4:
			++p;
			{ return true; }
yy5:
			yych = *++p;
			switch (yych) {
				case '\t':
				case '\v':
				case '\f':
				case ' ': goto yy5;
				case '#': goto yy4;
				default: goto yy6;
			}
yy6:
			p = YYMARKER;
			goto yy2;
		}

}

bool remove_final_backslash(string& line) {
	const char* p = line.c_str();
	const char* YYMARKER{ nullptr };
	while (true) {
		size_t parsed_len = p - line.c_str();
		
		{
			char yych;
			unsigned int yyaccept = 0;
			yych = *p;
			switch (yych) {
				case 0x00: goto yy8;
				case '"': goto yy11;
				case '\'': goto yy12;
				case ';': goto yy13;
				case 'A':
				case 'a': goto yy14;
				case 'B':
				case 'b': goto yy16;
				case 'C':
				case 'c': goto yy17;
				case 'D':
				case 'd': goto yy18;
				case 'E':
				case 'L':
				case 'e':
				case 'l': goto yy19;
				case 'F':
				case 'G':
				case 'I':
				case 'J':
				case 'K':
				case 'M':
				case 'N':
				case 'O':
				case 'P':
				case 'Q':
				case 'T':
				case 'U':
				case 'V':
				case 'W':
				case 'X':
				case 'Y':
				case 'Z':
				case '_':
				case 'f':
				case 'g':
				case 'i':
				case 'j':
				case 'k':
				case 'm':
				case 'n':
				case 'o':
				case 'p':
				case 'q':
				case 't':
				case 'u':
				case 'v':
				case 'w':
				case 'x':
				case 'y':
				case 'z': goto yy20;
				case 'H':
				case 'h': goto yy22;
				case 'R':
				case 'r': goto yy23;
				case 'S':
				case 's': goto yy24;
				case '\\': goto yy25;
				default: goto yy9;
			}
yy8:
			++p;
			{ return false; }
yy9:
			++p;
yy10:
			{ continue; }
yy11:
			yyaccept = 0;
			yych = *(YYMARKER = ++p);
			switch (yych) {
				case 0x00:
				case '\n':
				case '\r': goto yy10;
				default: goto yy27;
			}
yy12:
			yyaccept = 0;
			yych = *(YYMARKER = ++p);
			switch (yych) {
				case 0x00:
				case '\n':
				case '\r': goto yy10;
				default: goto yy32;
			}
yy13:
			++p;
			{ return false; }
yy14:
			yych = *++p;
			switch (yych) {
				case '\'': goto yy29;
				case 'F':
				case 'f': goto yy19;
				default: goto yy21;
			}
yy15:
			{ continue; }
yy16:
			yych = *++p;
			switch (yych) {
				case '\'': goto yy29;
				case 'C':
				case 'c': goto yy19;
				default: goto yy21;
			}
yy17:
			yych = *++p;
			switch (yych) {
				case '\'': goto yy29;
				case 'C':
				case 'c': goto yy34;
				default: goto yy21;
			}
yy18:
			yych = *++p;
			switch (yych) {
				case '\'': goto yy29;
				case 'E':
				case 'e': goto yy19;
				case 'S':
				case 's': goto yy35;
				default: goto yy21;
			}
yy19:
			yych = *++p;
			switch (yych) {
				case '\'': goto yy29;
				default: goto yy21;
			}
yy20:
			yych = *++p;
yy21:
			switch (yych) {
				case '0':
				case '1':
				case '2':
				case '3':
				case '4':
				case '5':
				case '6':
				case '7':
				case '8':
				case '9':
				case 'A':
				case 'B':
				case 'C':
				case 'D':
				case 'E':
				case 'F':
				case 'G':
				case 'H':
				case 'I':
				case 'J':
				case 'K':
				case 'L':
				case 'M':
				case 'N':
				case 'O':
				case 'P':
				case 'Q':
				case 'R':
				case 'S':
				case 'T':
				case 'U':
				case 'V':
				case 'W':
				case 'X':
				case 'Y':
				case 'Z':
				case '_':
				case 'a':
				case 'b':
				case 'c':
				case 'd':
				case 'e':
				case 'f':
				case 'g':
				case 'h':
				case 'i':
				case 'j':
				case 'k':
				case 'l':
				case 'm':
				case 'n':
				case 'o':
				case 'p':
				case 'q':
				case 'r':
				case 's':
				case 't':
				case 'u':
				case 'v':
				case 'w':
				case 'x':
				case 'y':
				case 'z': goto yy20;
				default: goto yy15;
			}
yy22:
			yych = *++p;
			switch (yych) {
				case '\'': goto yy29;
				case 'L':
				case 'l': goto yy19;
				default: goto yy21;
			}
yy23:
			yych = *++p;
			switch (yych) {
				case 'L':
				case 'R':
				case 'l':
				case 'r': goto yy36;
				default: goto yy21;
			}
yy24:
			yych = *++p;
			switch (yych) {
				case 'C':
				case 'c': goto yy34;
				default: goto yy21;
			}
yy25:
			yyaccept = 0;
			yych = *(YYMARKER = ++p);
			switch (yych) {
				case 0x00: goto yy37;
				case '\n': goto yy38;
				case '\r': goto yy39;
				default: goto yy10;
			}
yy26:
			yych = *++p;
yy27:
			switch (yych) {
				case 0x00:
				case '\n':
				case '\r': goto yy28;
				case '"': goto yy29;
				case '\\': goto yy30;
				default: goto yy26;
			}
yy28:
			p = YYMARKER;
			if (yyaccept == 0) {
				goto yy10;
			} else {
				goto yy15;
			}
yy29:
			++p;
			goto yy15;
yy30:
			yych = *++p;
			switch (yych) {
				case 0x00:
				case '\n':
				case '\r': goto yy28;
				default: goto yy26;
			}
yy31:
			yych = *++p;
yy32:
			switch (yych) {
				case 0x00:
				case '\n':
				case '\r': goto yy28;
				case '\'': goto yy29;
				case '\\': goto yy33;
				default: goto yy31;
			}
yy33:
			yych = *++p;
			switch (yych) {
				case 0x00:
				case '\n':
				case '\r': goto yy28;
				default: goto yy31;
			}
yy34:
			yych = *++p;
			switch (yych) {
				case 'F':
				case 'f': goto yy19;
				default: goto yy21;
			}
yy35:
			yyaccept = 1;
			yych = *(YYMARKER = ++p);
			switch (yych) {
				case '.': goto yy40;
				default: goto yy21;
			}
yy36:
			yych = *++p;
			switch (yych) {
				case 'A':
				case 'a': goto yy19;
				case 'C':
				case 'c': goto yy41;
				default: goto yy21;
			}
yy37:
			++p;
			{ line.erase(parsed_len);
								  line.push_back(' ');
								  return true; }
yy38:
			yych = *++p;
			if (yych <= 0x00) goto yy37;
			goto yy28;
yy39:
			yych = *++p;
			switch (yych) {
				case 0x00: goto yy37;
				case '\n': goto yy38;
				default: goto yy28;
			}
yy40:
			yych = *++p;
			switch (yych) {
				case 'B':
				case 'P':
				case 'Q':
				case 'W':
				case 'b':
				case 'p':
				case 'q':
				case 'w': goto yy29;
				default: goto yy28;
			}
yy41:
			yych = *++p;
			switch (yych) {
				case 'A':
				case 'a': goto yy19;
				default: goto yy21;
			}
		}

	}
}

const char* scan_label(const char* p) {
	const char* p0 = p;
	const char* YYMARKER = nullptr;
	
		{
			char yych;
			unsigned int yyaccept = 0;
			yych = *p;
			switch (yych) {
				case '\t':
				case '\v':
				case '\f':
				case ' ': goto yy45;
				case '.': goto yy46;
				case 'A':
				case 'B':
				case 'C':
				case 'D':
				case 'E':
				case 'F':
				case 'G':
				case 'H':
				case 'I':
				case 'J':
				case 'K':
				case 'L':
				case 'M':
				case 'N':
				case 'O':
				case 'P':
				case 'Q':
				case 'R':
				case 'S':
				case 'T':
				case 'U':
				case 'V':
				case 'W':
				case 'X':
				case 'Y':
				case 'Z':
				case '_':
				case 'a':
				case 'b':
				case 'c':
				case 'd':
				case 'e':
				case 'f':
				case 'g':
				case 'h':
				case 'i':
				case 'j':
				case 'k':
				case 'l':
				case 'm':
				case 'n':
				case 'o':
				case 'p':
				case 'q':
				case 'r':
				case 's':
				case 't':
				case 'u':
				case 'v':
				case 'w':
				case 'x':
				case 'y':
				case 'z': goto yy47;
				default: goto yy43;
			}
yy43:
			++p;
yy44:
			{ return p0; }
yy45:
			yyaccept = 0;
			yych = *(YYMARKER = ++p);
			switch (yych) {
				case '\t':
				case '\v':
				case '\f':
				case ' ': goto yy48;
				case '.': goto yy50;
				case 'A':
				case 'B':
				case 'C':
				case 'D':
				case 'E':
				case 'F':
				case 'G':
				case 'H':
				case 'I':
				case 'J':
				case 'K':
				case 'L':
				case 'M':
				case 'N':
				case 'O':
				case 'P':
				case 'Q':
				case 'R':
				case 'S':
				case 'T':
				case 'U':
				case 'V':
				case 'W':
				case 'X':
				case 'Y':
				case 'Z':
				case '_':
				case 'a':
				case 'b':
				case 'c':
				case 'd':
				case 'e':
				case 'f':
				case 'g':
				case 'h':
				case 'i':
				case 'j':
				case 'k':
				case 'l':
				case 'm':
				case 'n':
				case 'o':
				case 'p':
				case 'q':
				case 'r':
				case 's':
				case 't':
				case 'u':
				case 'v':
				case 'w':
				case 'x':
				case 'y':
				case 'z': goto yy51;
				default: goto yy44;
			}
yy46:
			yyaccept = 0;
			yych = *(YYMARKER = ++p);
			switch (yych) {
				case '\t':
				case '\v':
				case '\f':
				case ' ': goto yy50;
				case 'A':
				case 'B':
				case 'C':
				case 'D':
				case 'E':
				case 'F':
				case 'G':
				case 'H':
				case 'I':
				case 'J':
				case 'K':
				case 'L':
				case 'M':
				case 'N':
				case 'O':
				case 'P':
				case 'Q':
				case 'R':
				case 'S':
				case 'T':
				case 'U':
				case 'V':
				case 'W':
				case 'X':
				case 'Y':
				case 'Z':
				case '_':
				case 'a':
				case 'b':
				case 'c':
				case 'd':
				case 'e':
				case 'f':
				case 'g':
				case 'h':
				case 'i':
				case 'j':
				case 'k':
				case 'l':
				case 'm':
				case 'n':
				case 'o':
				case 'p':
				case 'q':
				case 'r':
				case 's':
				case 't':
				case 'u':
				case 'v':
				case 'w':
				case 'x':
				case 'y':
				case 'z': goto yy53;
				default: goto yy44;
			}
yy47:
			yyaccept = 0;
			yych = *(YYMARKER = ++p);
			switch (yych) {
				case '\t':
				case '\v':
				case '\f':
				case ' ':
				case '0':
				case '1':
				case '2':
				case '3':
				case '4':
				case '5':
				case '6':
				case '7':
				case '8':
				case '9':
				case ':':
				case 'A':
				case 'B':
				case 'C':
				case 'D':
				case 'E':
				case 'F':
				case 'G':
				case 'H':
				case 'I':
				case 'J':
				case 'K':
				case 'L':
				case 'M':
				case 'N':
				case 'O':
				case 'P':
				case 'Q':
				case 'R':
				case 'S':
				case 'T':
				case 'U':
				case 'V':
				case 'W':
				case 'X':
				case 'Y':
				case 'Z':
				case '_':
				case 'a':
				case 'b':
				case 'c':
				case 'd':
				case 'e':
				case 'f':
				case 'g':
				case 'h':
				case 'i':
				case 'j':
				case 'k':
				case 'l':
				case 'm':
				case 'n':
				case 'o':
				case 'p':
				case 'q':
				case 'r':
				case 's':
				case 't':
				case 'u':
				case 'v':
				case 'w':
				case 'x':
				case 'y':
				case 'z': goto yy52;
				default: goto yy44;
			}
yy48:
			yych = *++p;
			switch (yych) {
				case '\t':
				case '\v':
				case '\f':
				case ' ': goto yy48;
				case '.': goto yy50;
				case 'A':
				case 'B':
				case 'C':
				case 'D':
				case 'E':
				case 'F':
				case 'G':
				case 'H':
				case 'I':
				case 'J':
				case 'K':
				case 'L':
				case 'M':
				case 'N':
				case 'O':
				case 'P':
				case 'Q':
				case 'R':
				case 'S':
				case 'T':
				case 'U':
				case 'V':
				case 'W':
				case 'X':
				case 'Y':
				case 'Z':
				case '_':
				case 'a':
				case 'b':
				case 'c':
				case 'd':
				case 'e':
				case 'f':
				case 'g':
				case 'h':
				case 'i':
				case 'j':
				case 'k':
				case 'l':
				case 'm':
				case 'n':
				case 'o':
				case 'p':
				case 'q':
				case 'r':
				case 's':
				case 't':
				case 'u':
				case 'v':
				case 'w':
				case 'x':
				case 'y':
				case 'z': goto yy51;
				default: goto yy49;
			}
yy49:
			p = YYMARKER;
			switch (yyaccept) {
				case 0: goto yy44;
				case 1: goto yy54;
				default: goto yy57;
			}
yy50:
			yych = *++p;
			switch (yych) {
				case '\t':
				case '\v':
				case '\f':
				case ' ': goto yy50;
				case 'A':
				case 'B':
				case 'C':
				case 'D':
				case 'E':
				case 'F':
				case 'G':
				case 'H':
				case 'I':
				case 'J':
				case 'K':
				case 'L':
				case 'M':
				case 'N':
				case 'O':
				case 'P':
				case 'Q':
				case 'R':
				case 'S':
				case 'T':
				case 'U':
				case 'V':
				case 'W':
				case 'X':
				case 'Y':
				case 'Z':
				case '_':
				case 'a':
				case 'b':
				case 'c':
				case 'd':
				case 'e':
				case 'f':
				case 'g':
				case 'h':
				case 'i':
				case 'j':
				case 'k':
				case 'l':
				case 'm':
				case 'n':
				case 'o':
				case 'p':
				case 'q':
				case 'r':
				case 's':
				case 't':
				case 'u':
				case 'v':
				case 'w':
				case 'x':
				case 'y':
				case 'z': goto yy53;
				default: goto yy49;
			}
yy51:
			yych = *++p;
yy52:
			switch (yych) {
				case '\t':
				case '\v':
				case '\f':
				case ' ': goto yy55;
				case '0':
				case '1':
				case '2':
				case '3':
				case '4':
				case '5':
				case '6':
				case '7':
				case '8':
				case '9':
				case 'A':
				case 'B':
				case 'C':
				case 'D':
				case 'E':
				case 'F':
				case 'G':
				case 'H':
				case 'I':
				case 'J':
				case 'K':
				case 'L':
				case 'M':
				case 'N':
				case 'O':
				case 'P':
				case 'Q':
				case 'R':
				case 'S':
				case 'T':
				case 'U':
				case 'V':
				case 'W':
				case 'X':
				case 'Y':
				case 'Z':
				case '_':
				case 'a':
				case 'b':
				case 'c':
				case 'd':
				case 'e':
				case 'f':
				case 'g':
				case 'h':
				case 'i':
				case 'j':
				case 'k':
				case 'l':
				case 'm':
				case 'n':
				case 'o':
				case 'p':
				case 'q':
				case 'r':
				case 's':
				case 't':
				case 'u':
				case 'v':
				case 'w':
				case 'x':
				case 'y':
				case 'z': goto yy51;
				case ':': goto yy56;
				default: goto yy49;
			}
yy53:
			yyaccept = 1;
			yych = *(YYMARKER = ++p);
			switch (yych) {
				case '\t':
				case '\v':
				case '\f':
				case ' ': goto yy58;
				case '0':
				case '1':
				case '2':
				case '3':
				case '4':
				case '5':
				case '6':
				case '7':
				case '8':
				case '9':
				case 'A':
				case 'B':
				case 'C':
				case 'D':
				case 'E':
				case 'F':
				case 'G':
				case 'H':
				case 'I':
				case 'J':
				case 'K':
				case 'L':
				case 'M':
				case 'N':
				case 'O':
				case 'P':
				case 'Q':
				case 'R':
				case 'S':
				case 'T':
				case 'U':
				case 'V':
				case 'W':
				case 'X':
				case 'Y':
				case 'Z':
				case '_':
				case 'a':
				case 'b':
				case 'c':
				case 'd':
				case 'e':
				case 'f':
				case 'g':
				case 'h':
				case 'i':
				case 'j':
				case 'k':
				case 'l':
				case 'm':
				case 'n':
				case 'o':
				case 'p':
				case 'q':
				case 'r':
				case 's':
				case 't':
				case 'u':
				case 'v':
				case 'w':
				case 'x':
				case 'y':
				case 'z': goto yy53;
				case '=': goto yy59;
				default: goto yy54;
			}
yy54:
			{ return p; }
yy55:
			yych = *++p;
			switch (yych) {
				case '\t':
				case '\v':
				case '\f':
				case ' ': goto yy55;
				case ':': goto yy56;
				default: goto yy49;
			}
yy56:
			yyaccept = 2;
			yych = *(YYMARKER = ++p);
			switch (yych) {
				case '\t':
				case '\v':
				case '\f':
				case ' ': goto yy60;
				case '=': goto yy61;
				case 'E':
				case 'e': goto yy62;
				default: goto yy57;
			}
yy57:
			{ return p; }
yy58:
			yych = *++p;
			switch (yych) {
				case '\t':
				case '\v':
				case '\f':
				case ' ': goto yy58;
				case '=': goto yy59;
				case 'E':
				case 'e': goto yy63;
				default: goto yy49;
			}
yy59:
			++p;
			{ return p; }
yy60:
			yych = *++p;
			switch (yych) {
				case '\t':
				case '\v':
				case '\f':
				case ' ': goto yy60;
				case '=': goto yy61;
				case 'E':
				case 'e': goto yy62;
				default: goto yy49;
			}
yy61:
			++p;
			{ return p; }
yy62:
			yych = *++p;
			switch (yych) {
				case 'Q':
				case 'q': goto yy64;
				default: goto yy49;
			}
yy63:
			yych = *++p;
			switch (yych) {
				case 'Q':
				case 'q': goto yy65;
				default: goto yy49;
			}
yy64:
			yych = *++p;
			switch (yych) {
				case 'U':
				case 'u': goto yy61;
				default: goto yy49;
			}
yy65:
			yych = *++p;
			switch (yych) {
				case 'U':
				case 'u': goto yy59;
				default: goto yy49;
			}
		}

}
